[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/mop.png" type="Texture" id=1]
[ext_resource path="res://Sprites/itemindicator_back.png" type="Texture" id=2]
[ext_resource path="res://Sprites/itemindicator_front.png" type="Texture" id=3]
[ext_resource path="res://ItemIndicator.gd" type="Script" id=4]

[node name="ItemIndicator" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = 96.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTimeIndicator" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = -3.0
value = 30.0
texture_progress = ExtResource( 2 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemFrame" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIndicator" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
